fix: sonar directives